# CircuitPython_RP2350_v5b_PingDemo

./: .gitignore  Makefile  README.md  config.json  main.py  pyproject.toml  repl.py  sonar-project.properties  sx1280.py
docs/: quickstart.md
lib/: requirements.txt
src/flight-software/: boot.py  main.py  repl.py  utils.py
src/ground-station/: boot.py  repl.py
src/ground-station/lib/: requirements.txt
typings/: board.pyi
