[project]
name = "proveskit-rp2350-v5a"
version = "1.0.0"
description = "Flight Software for the PROVES Kit RP2350 v5A"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adafruit-circuitpython-typing==1.11.2",
    "circuitpython-stubs==9.2.5",
    "coverage==7.6.10",
    "pre-commit==4.0.1",
    "pyright[nodejs]==1.1.399",
    "pytest==8.3.2",
]

[tool.ruff.format]
# Use `\n` line endings for all files
line-ending = "lf"

[tool.pyright]
include = ["main.py", "boot.py", "repl.py", "safemode.py"]
exclude = [
    "**/__pycache__",
    ".venv",
    ".git",
    "artifacts",
    "lib",
    "typings",
]
stubPath = "./typings"
reportMissingModuleSource = false
