[project]
name = "proveskit-rp2350-v5b"
version = "1.0.0"
description = "Flight Software for the PROVES Kit RP2350 v5b"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "adafruit-circuitpython-typing==1.12.1",
    "circuitpython-stubs==9.2.8",
    "pre-commit==4.2.0",
    "pyright[nodejs]==1.1.402",
]

[tool.ruff.format]
# Use `\n` line endings for all files
line-ending = "lf"

[tool.pyright]
include = [
    "src/flight-software/boot.py",
    "src/flight-software/main.py",
    "src/flight-software/repl.py",
    "src/flight-software/safemode.py",
    "src/flight-software/lib/proveskit_rp2040_v4/*",
    "src/ground-station/boot.py",
    "src/ground-station/main.py",
    "src/ground-station/repl.py",
    "src/ground-station/safemode.py",
]
exclude = [
    "**/__pycache__",
    ".venv",
    ".git",
    "artifacts",
    "src/*/lib",
    "typings",
]
stubPath = "./typings"
reportMissingModuleSource = false
